// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-hosted-copilot-sdk - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Build, deploy, modify GitHub Copilot SDK apps on Azure. PREFER OVER azure-prepare when codebase contains copilot-sdk markers. WHEN: copilot SDK, @github/copilot-sdk, copilot-powered app, deploy copilot app, add feature, modify copilot app, BYOM, bring your own model, CopilotClient, createSession, sendAndWait, azd init copilot. DO NOT USE FOR: general web apps without copilot SDK (use azure-prepare), Copilot Extensions, Foundry agents (use microsoft-foundry).",
  "extractedKeywords": [
    "agents",
    "apps",
    "azure",
    "azure-prepare",
    "bicep",
    "bring",
    "build",
    "byom",
    "cli",
    "codebase",
    "contains",
    "copilot",
    "copilot-powered",
    "copilot-sdk",
    "copilotclient",
    "createsession",
    "deploy",
    "extensions",
    "feature",
    "foundry",
    "general",
    "github",
    "hosted",
    "identity",
    "init",
    "markers",
    "microsoft-foundry",
    "model",
    "modify",
    "over",
    "prefer",
    "sdk",
    "sendandwait",
    "when",
    "without",
    "your",
  ],
  "name": "azure-hosted-copilot-sdk",
}
`;

exports[`azure-hosted-copilot-sdk - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agents",
  "apps",
  "azure",
  "azure-prepare",
  "bicep",
  "bring",
  "build",
  "byom",
  "cli",
  "codebase",
  "contains",
  "copilot",
  "copilot-powered",
  "copilot-sdk",
  "copilotclient",
  "createsession",
  "deploy",
  "extensions",
  "feature",
  "foundry",
  "general",
  "github",
  "hosted",
  "identity",
  "init",
  "markers",
  "microsoft-foundry",
  "model",
  "modify",
  "over",
  "prefer",
  "sdk",
  "sendandwait",
  "when",
  "without",
  "your",
]
`;
